--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,9 @@
 [Window][Debug##Default]
-ViewportPos=1214,47
-ViewportId=0xA4D966FE
-Pos=0,388
-Size=445,392
+ViewportPos=263,586
+ViewportId=0xD4B39271
+Size=965,245
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000003,1
 
 [Window][Scene01]
 Pos=1108,588
@@ -17,11 +16,10 @@ Size=432,261
 Collapsed=0
 
 [Window][Scene]
-ViewportPos=1214,47
-ViewportId=0xA4D966FE
-Size=445,386
+ViewportPos=1238,50
+ViewportId=0x18B8C0DE
+Size=445,562
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Scene03]
 Pos=887,106
@@ -59,13 +57,14 @@ Size=100,48
 Collapsed=0
 
 [Window][Content]
-ViewportPos=266,589
-ViewportId=0x31780935
-Size=967,248
+ViewportPos=263,586
+ViewportId=0xD4B39271
+Size=965,245
 Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1214,47 Size=445,780 Split=Y Selected=0x9F5F46A1
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=445,385 Selected=0x18B8C0DE
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=445,390 Selected=0x9F5F46A1
+DockNode    ID=0x00000004 Pos=263,586 Size=965,245 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=445,385 Selected=0x18B8C0DE
+  DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=445,390 Selected=0x31780935
 
