--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -429,6 +429,9 @@
     <ClCompile Include="Source\Engine\texture_resource_manager.cpp">
       <Filter>Source\System</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\shader_asset.cpp">
+      <Filter>Source\Shader%28.cpp%29\System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\scene.h">
@@ -602,9 +605,6 @@
     <ClInclude Include="Source\Engine\dx11_configurator.h">
       <Filter>Header\System</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Engine\easing.h">
-      <Filter>Header\System</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Engine\editor_manager.h">
       <Filter>Header\System</Filter>
     </ClInclude>
@@ -675,9 +675,6 @@
       <Filter>Header\System</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\state_machine.h">
-      <Filter>Header\System</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Engine\string_helper.h">
       <Filter>Header\System</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\texture.h">
@@ -790,6 +787,15 @@
     </ClInclude>
     <ClInclude Include="Source\Engine\texture_filename_mapping.h">
       <Filter>Header\System\Mapping</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\easing.h">
+      <Filter>Header\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\string_helper.h">
+      <Filter>Header\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\cum_imgui_helper.h">
+      <Filter>Header\Helper</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -915,6 +921,9 @@
     </Filter>
     <Filter Include="Source\Shader%28.cpp%29\System">
       <UniqueIdentifier>{6befa1f9-9451-4628-83ee-660e5eba045a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header\Helper">
+      <UniqueIdentifier>{2c5e9954-c4ee-4b86-920e-d520966105c9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
