--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -432,6 +432,12 @@
     <ClCompile Include="Source\Engine\shader_asset.cpp">
       <Filter>Source\Shader%28.cpp%29\System</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\pch.cpp">
+      <Filter>Source\System</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\material3d_manager.cpp">
+      <Filter>Source\Shader%28.cpp%29\System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\scene.h">
@@ -796,6 +802,12 @@
     </ClInclude>
     <ClInclude Include="Source\Engine\cum_imgui_helper.h">
       <Filter>Header\Helper</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\pch.h">
+      <Filter>Header\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\material3d_manager.h">
+      <Filter>Header\Shader%28.h%29\System</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
