--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -240,9 +240,6 @@
     <ClCompile Include="Source\Engine\reflection_mapping.cpp">
       <Filter>Source\Shader%28.cpp%29</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Engine\refraction_mapping.cpp">
-      <Filter>Source\Shader%28.cpp%29</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Engine\shadow_map.cpp">
       <Filter>Source\Shader%28.cpp%29</Filter>
     </ClCompile>
@@ -438,6 +435,9 @@
     <ClCompile Include="Source\Engine\material3d_manager.cpp">
       <Filter>Source\Shader%28.cpp%29\System</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\refraction_mapping.cpp">
+      <Filter>Shader%28HLSL%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\scene.h">
@@ -552,9 +552,6 @@
       <Filter>Header\Shader%28.h%29</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\shadow_map.h">
-      <Filter>Header\Shader%28.h%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Engine\refraction_mapping.h">
       <Filter>Header\Shader%28.h%29</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\reflection_mapping.h">
@@ -808,6 +805,9 @@
     </ClInclude>
     <ClInclude Include="Source\Engine\material3d_manager.h">
       <Filter>Header\Shader%28.h%29\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\refraction_mapping.h">
+      <Filter>Header\Shader%28.h%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
