--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -77,7 +77,6 @@
     <ClInclude Include="Source\Engine\locator.h" />
     <ClInclude Include="Source\Engine\Logger.h" />
     <ClInclude Include="Source\Engine\material_component.h" />
-    <ClInclude Include="Source\Engine\material_instance_component.h" />
     <ClInclude Include="Source\Engine\mesh_object.h" />
     <ClInclude Include="Source\Engine\mesh_particle.h" />
     <ClInclude Include="Source\Engine\normal_map_resource.h" />
@@ -97,8 +96,8 @@
     <ClInclude Include="Source\Engine\render_path.h" />
     <ClInclude Include="Source\Engine\resource_manager.h" />
     <ClInclude Include="Source\Engine\sampler_mapping.h" />
+    <ClInclude Include="Source\Engine\sample_shader.h" />
     <ClInclude Include="Source\Engine\shader_asset.h" />
-    <ClInclude Include="Source\Engine\shader_assets_component.h" />
     <ClInclude Include="Source\Engine\material3d_manager.h" />
     <ClInclude Include="Source\Engine\shader_asset_mapping.h" />
     <ClInclude Include="Source\Engine\shader_filename_mapping.h" />
@@ -193,7 +192,6 @@
     <ClCompile Include="Source\Engine\Logger.cpp" />
     <ClCompile Include="Source\Engine\main.cpp" />
     <ClCompile Include="Source\Engine\material_component.cpp" />
-    <ClCompile Include="Source\Engine\material_instance_component.cpp" />
     <ClCompile Include="Source\Engine\mesh_object.cpp" />
     <ClCompile Include="Source\Engine\mesh_particle.cpp" />
     <ClCompile Include="Source\Engine\obj_model_component.cpp" />
@@ -202,6 +200,10 @@
     <ClCompile Include="Source\Engine\model_render.cpp" />
     <ClCompile Include="Source\Engine\pch.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Source\Engine\phong.cpp" />
     <ClCompile Include="Source\Engine\pixel_shader.cpp" />
@@ -212,6 +214,7 @@
     <ClCompile Include="Source\Engine\render_path.cpp" />
     <ClCompile Include="Source\Engine\resource_manager.cpp" />
     <ClCompile Include="Source\Engine\sampler.cpp" />
+    <ClCompile Include="Source\Engine\sample_shader.cpp" />
     <ClCompile Include="Source\Engine\scene.cpp" />
     <ClCompile Include="Source\Engine\scene_game.cpp" />
     <ClCompile Include="Source\Engine\scene_load.cpp" />
@@ -219,7 +222,6 @@
     <ClCompile Include="Source\Engine\scene_tutorial.cpp" />
     <ClCompile Include="Source\Engine\shader.cpp" />
     <ClCompile Include="Source\Engine\shader_asset.cpp" />
-    <ClCompile Include="Source\Engine\shader_assets_component.cpp" />
     <ClCompile Include="Source\Engine\material3d_manager.cpp" />
     <ClCompile Include="Source\Engine\shader_filename_mapping.cpp" />
     <ClCompile Include="Source\Engine\shader_manager.cpp" />
@@ -669,8 +671,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level2</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -679,6 +680,8 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalIncludeDirectories>.\Source\Engine;.\Libraries\imgui;.\Libraries\DirectXTK-master\Inc;.\Libraries\FBX\FBX SDK\2019.0\include;.\Libraries\cereal-master\include;.\Libraries\Effekseer152\include\EffekseerRendererDX11;.\Libraries\Effekseer152\include\Effekseer;%(AdditionalIncludeDirectories);D:\Project_5Weeks\Source\Game;.\Source\Game;D:\SunLight_Ver_1_3\Libraries\nameof</AdditionalIncludeDirectories>
       <AdditionalOptions>-DNOMINMAX %(AdditionalOptions)</AdditionalOptions>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -705,7 +708,9 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
-      <PrecompiledHeaderFile>stdafx.h  pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -722,8 +727,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level2</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -734,6 +738,8 @@
       <AdditionalIncludeDirectories>.\Source\Engine;.\Libraries\imgui;.\Libraries\FBX\FBX SDK\2019.0\include;.\Libraries\DirectXTK-master\Inc;.\Libraries\cereal-master\include;.\Libraries\Effekseer152\include\Effekseer;.\Libraries\Effekseer152\include\EffekseerRendererDX11;%(AdditionalIncludeDirectories);D:\Project_5Weeks\Source\Game;.\Source\Game;D:\SunLight_Ver_1_3\Libraries\nameof</AdditionalIncludeDirectories>
       <AdditionalOptions>-DNOMINMAX %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -755,8 +761,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -770,6 +775,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>MaxSpeed</Optimization>
       <WholeProgramOptimization>true</WholeProgramOptimization>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
