--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -417,12 +417,6 @@
     <ClCompile Include="Source\Engine\pixel_shader.cpp">
       <Filter>Source\Shader%28.cpp%29\System</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Engine\shader_assets_component.cpp">
-      <Filter>Source\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Engine\material_instance_component.cpp">
-      <Filter>Source\Components</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Engine\texture_resource_manager.cpp">
       <Filter>Source\System</Filter>
     </ClCompile>
@@ -437,6 +431,9 @@
     </ClCompile>
     <ClCompile Include="Source\Engine\refraction_mapping.cpp">
       <Filter>Shader%28HLSL%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\sample_shader.cpp">
+      <Filter>Source\Shader%28.cpp%29</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -776,12 +773,6 @@
     <ClInclude Include="Source\Engine\shader_asset.h">
       <Filter>Header\Shader%28.h%29\System</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Engine\shader_assets_component.h">
-      <Filter>Header\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Engine\material_instance_component.h">
-      <Filter>Header\Components</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Engine\normal_map_resource.h">
       <Filter>Header\System</Filter>
     </ClInclude>
@@ -807,6 +798,9 @@
       <Filter>Header\Shader%28.h%29\System</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\refraction_mapping.h">
+      <Filter>Header\Shader%28.h%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\sample_shader.h">
       <Filter>Header\Shader%28.h%29</Filter>
     </ClInclude>
   </ItemGroup>
