--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -124,6 +124,12 @@
     <FxCompile Include="Shader\variance_shadow_depth_extraction_vs.hlsl">
       <Filter>Shader%28HLSL%29\VS</Filter>
     </FxCompile>
+    <FxCompile Include="Shader\sample_shader_vs.hlsl">
+      <Filter>Shader%28HLSL%29\VS</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\sample_shader_ps.hlsl">
+      <Filter>Shader%28HLSL%29\PS</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Engine\scene.cpp">
@@ -434,6 +440,9 @@
     </ClCompile>
     <ClCompile Include="Source\Engine\sample_shader.cpp">
       <Filter>Source\Shader%28.cpp%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Engine\gbuffer.cpp">
+      <Filter>Source\System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -802,6 +811,9 @@
     </ClInclude>
     <ClInclude Include="Source\Engine\sample_shader.h">
       <Filter>Header\Shader%28.h%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\gbuffer.h">
+      <Filter>Header\System</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
