--- a/Cumulonimbus.vcxproj.filters
+++ b/Cumulonimbus.vcxproj.filters
@@ -139,6 +139,9 @@
     <FxCompile Include="Shader\image_vs.hlsl">
       <Filter>Shader%28HLSL%29\VS</Filter>
     </FxCompile>
+    <FxCompile Include="Shader\gbuffer_lighting_ps.hlsl">
+      <Filter>Shader%28HLSL%29\PS</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Engine\scene.cpp">
