player_componentクラスの作成

--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -139,9 +139,9 @@
     <ClInclude Include="Source\Engine\vertex_shader.h" />
     <ClInclude Include="Source\Engine\view.h" />
     <ClInclude Include="Source\Engine\window.h" />
+    <ClInclude Include="Source\Game\player_component.h" />
     <ClInclude Include="Source\Game\rotation_sample.h" />
     <ClInclude Include="Source\Game\sound_resource.h" />
-    <ClInclude Include="Source\Game\test_mesh_particle.h" />
     <ClInclude Include="Source\test_animation_character.h" />
   </ItemGroup>
   <ItemGroup>
@@ -250,8 +250,8 @@
     <ClCompile Include="Source\Engine\view.cpp" />
     <ClCompile Include="Source\Engine\toon.cpp" />
     <ClCompile Include="Source\Engine\window.cpp" />
+    <ClCompile Include="Source\Game\player_component.cpp" />
     <ClCompile Include="Source\Game\sound_resource.cpp" />
-    <ClCompile Include="Source\Game\test_mesh_particle.cpp" />
     <ClCompile Include="Source\scene01.cpp" />
     <ClCompile Include="Source\scene02.cpp" />
     <ClCompile Include="Source\scene03.cpp" />
