--- a/imgui.ini
+++ b/imgui.ini
@@ -1,9 +1,8 @@
 [Window][Debug##Default]
-ViewportPos=263,586
-ViewportId=0xD4B39271
-Size=965,245
+Pos=32,7
+Size=681,422
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000006,0
 
 [Window][Scene01]
 Pos=1108,588
@@ -16,10 +15,10 @@ Size=432,261
 Collapsed=0
 
 [Window][Scene]
-ViewportPos=1238,50
-ViewportId=0x18B8C0DE
-Size=698,562
+Pos=715,7
+Size=282,422
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Scene03]
 Pos=887,106
@@ -57,14 +56,23 @@ Size=100,48
 Collapsed=0
 
 [Window][Content]
-ViewportPos=263,586
-ViewportId=0xD4B39271
-Size=965,245
+Pos=32,431
+Size=965,188
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
+
+[Window][RTV]
+Pos=32,7
+Size=681,422
+Collapsed=0
+DockId=0x00000006,1
 
 [Docking][Data]
-DockNode    ID=0x00000004 Pos=263,586 Size=965,245 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=445,385 Selected=0x18B8C0DE
-  DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=445,390 Selected=0x31780935
+DockNode        ID=0x00000001 Pos=32,7 Size=965,612 Split=Y Selected=0x18B8C0DE
+  DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=445,385 Selected=0x18B8C0DE
+  DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=445,390 Split=Y Selected=0xCCA64F5D
+    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=965,422 Split=X Selected=0xCCA64F5D
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=681,306 Selected=0xCCA64F5D
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=282,306 Selected=0x18B8C0DE
+    DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=965,188 Selected=0x31780935
 
