--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="Source\Engine\input_manager.h" />
     <ClInclude Include="Source\Engine\input_system.h" />
     <ClInclude Include="Source\Engine\light.h" />
+    <ClInclude Include="Source\Engine\local_shader_manager.h" />
     <ClInclude Include="Source\Engine\locator.h" />
     <ClInclude Include="Source\Engine\Logger.h" />
     <ClInclude Include="Source\Engine\material_component.h" />
@@ -199,6 +200,7 @@
     <ClCompile Include="Source\Engine\input_manager.cpp" />
     <ClCompile Include="Source\Engine\input_system.cpp" />
     <ClCompile Include="Source\Engine\light.cpp" />
+    <ClCompile Include="Source\Engine\local_shader_manager.cpp" />
     <ClCompile Include="Source\Engine\Logger.cpp" />
     <ClCompile Include="Source\Engine\main.cpp" />
     <ClCompile Include="Source\Engine\material_component.cpp" />
