--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="Source\Engine\material_component.h" />
     <ClInclude Include="Source\Engine\mesh_object.h" />
     <ClInclude Include="Source\Engine\mesh_particle.h" />
+    <ClInclude Include="Source\Engine\movement_component.h" />
     <ClInclude Include="Source\Engine\normal_map_resource.h" />
     <ClInclude Include="Source\Engine\obj_model_component.h" />
     <ClInclude Include="Source\Engine\metal.h" />
@@ -94,6 +95,7 @@
     <ClInclude Include="Source\Engine\pbr_material.h" />
     <ClInclude Include="Source\Engine\pch.h" />
     <ClInclude Include="Source\Engine\phong.h" />
+    <ClInclude Include="Source\Engine\physics_component.h" />
     <ClInclude Include="Source\Engine\pixel_shader.h" />
     <ClInclude Include="Source\Engine\rasterizer.h" />
     <ClInclude Include="Source\Engine\raycast_component.h" />
@@ -208,6 +210,7 @@
     <ClCompile Include="Source\Engine\material_component.cpp" />
     <ClCompile Include="Source\Engine\mesh_object.cpp" />
     <ClCompile Include="Source\Engine\mesh_particle.cpp" />
+    <ClCompile Include="Source\Engine\movement_component.cpp" />
     <ClCompile Include="Source\Engine\obj_model_component.cpp" />
     <ClCompile Include="Source\Engine\metal.cpp" />
     <ClCompile Include="Source\Engine\model_data.cpp" />
@@ -220,6 +223,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Source\Engine\physics_component.cpp" />
     <ClCompile Include="Source\Engine\phong.cpp" />
     <ClCompile Include="Source\Engine\pixel_shader.cpp" />
     <ClCompile Include="Source\Engine\rasterize.cpp" />
