Enemy(スライム)の状態遷移作成中

--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -258,6 +258,7 @@
     <ClCompile Include="Source\Engine\toon.cpp" />
     <ClCompile Include="Source\Engine\window.cpp" />
     <ClCompile Include="Source\Game\enemy_base_component.cpp" />
+    <ClCompile Include="Source\Game\enemy_slime_component.cpp" />
     <ClCompile Include="Source\Game\player_component.cpp" />
     <ClCompile Include="Source\Game\sound_resource.cpp" />
     <ClCompile Include="Source\scene01.cpp" />
