--- a/Cumulonimbus.vcxproj
+++ b/Cumulonimbus.vcxproj
@@ -82,7 +82,7 @@
     <ClInclude Include="Source\Engine\material_component.h" />
     <ClInclude Include="Source\Engine\mesh_object.h" />
     <ClInclude Include="Source\Engine\mesh_particle.h" />
-    <ClInclude Include="Source\Engine\movement_component.h" />
+    <ClInclude Include="Source\Engine\rigid_body_component.h" />
     <ClInclude Include="Source\Engine\normal_map_resource.h" />
     <ClInclude Include="Source\Engine\obj_model_component.h" />
     <ClInclude Include="Source\Engine\metal.h" />
@@ -202,7 +202,7 @@
     <ClCompile Include="Source\Engine\material_component.cpp" />
     <ClCompile Include="Source\Engine\mesh_object.cpp" />
     <ClCompile Include="Source\Engine\mesh_particle.cpp" />
-    <ClCompile Include="Source\Engine\movement_component.cpp" />
+    <ClCompile Include="Source\Engine\rigid_body_component..cpp" />
     <ClCompile Include="Source\Engine\obj_model_component.cpp" />
     <ClCompile Include="Source\Engine\metal.cpp" />
     <ClCompile Include="Source\Engine\model_data.cpp" />
